Add JVM options required to test under Java 16